2009-04-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::addTreePage):
	references bug #2783780: trying QTreeWidget::sortItems() instead
	of sortByColumn

2009-04-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* RoutingCompiler_pix.cpp (RoutingCompiler_pix::prolog): fixes bug
	#2782645: "Can't compile for FWSM platform". Routing compiler for
	PIX should accept firewall object with platform "fwsm" as well as
	"pix".

	* ObjectManipulator.cpp (ObjectManipulator::actuallyCreateObject):
	fixes bug #2783780: "Tree objects not sorted in
	3.0.4". Automatically re-sort object branch when new host or
	firewall object is created so that the new object is positioned in
	the alphabetic sorting order.

2009-04-27  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::getMenuState): for bug
	#2782289: "Crashes when deleting unused host object". Added
	safeguards to make it impossible to delete objects in the Standard
	library, as well as for a few other cases. Waiting for a
	clarification on the bug anyway.

	* ObjectListView.cpp (ObjectListView::dragObject): fixed bug
	#2781952: "fwbuilder (3.0.4-b794) crashes when creating a new
	group".  The GUI crashed if user clicked and dragged mouse inside
	empty list of group members in the dialog of the new group object.

2009-04-15  vadim  <vadim@vk.crocodile.org>

	* ipcopAdvancedDialog.cpp (ipcopAdvancedDialog::ipcopAdvancedDialog):
	Integration with IPCOP, Endian and OneShield firewall apliances
	(all based on linux/iptables). This sets generate file name to
	"rc.firewall.local", destination directory on the firewall to
	"/etc/rc.d/" and activation command to "/etc/rc.d/rc.firewall
	restart".  Provided resource files for ipcop, endian and oneshield
	platforms and os define default parameters, including path to
	iptables and other command line tools. Generated script performs
	minimal environment setting, because everything is supposed to be