@@ -7,23 +7,33 @@ if test ! -x "$MAKE" ; then MAKE=`which make` ; fi
 HAVE_GNU_MAKE=`$MAKE --version|grep -c "Free Software Foundation"`
 
 if test "$HAVE_GNU_MAKE" != "1"; then 
-  echo Could not find GNU make on this system, can not proceed with build.
+  echo "Could not find GNU make on this system, can not proceed with build."
   exit 1
 else
-  echo Found GNU Make at $MAKE ... good.
+  echo "Found GNU Make at $MAKE ... good."
 fi
-
-echo This script runs configure ...
-echo You did remember necessary arguments for configure, right?
 
 if test ! -x "`which aclocal`"
-then echo you need autoconf to generate the configure script
+then
+  echo "You need aclocal and autoconf to generate configure and Makefile."
+  echo "Please install autoconf package."
+  exit 1
 fi
 
+if test ! -x "`which libtoolize`"
+then
+  if test ! -x "`which glibtoolize`"
+  then
+    echo "You need libtoolize to generate autoconf and libtool scripts."
+    echo "Please install libtool package."
+    exit 1
+  fi
+fi
+
+echo "This script runs configure ..."
 
 ACLOCALARG=""
 test -d /sw/share/ && ACLOCALARG=" -I /sw/share/aclocal"
-
 
 which libtoolize >/dev/null 2>&1 && libtoolize --force --copy
 which glibtoolize >/dev/null 2>&1 && glibtoolize --force --copy
